--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <tr>
 <td>Nama</td>
 <td>Bimo Amandito</td>
-<td rowspan="7"><img src="bim no bg.png" width="250"></td>
+<td rowspan="7"><img src="bim.png" width="250"></td>
 </tr>
 <tr>
 <td>Tempat/Tanggal Lahir</td>
