--- a/service.html
+++ b/service.html
@@ -49,7 +49,7 @@
             <img class="sd" src="sdks-removebg.png" style="height: 400px;">
             <img class="smp" src="smp2-removebg-preview.png" style="height: 300px;">
             <img class="sma" src="smansaaa.png" style="height: 300px;">
-            <img class="univ" src="unsoed logo.png" style="height: 300px;">
+            <img class="univ" src="unsoed.png" style="height: 300px;">
 			<pre>                                    SD YPKS 5 Cilegon                        		              SMP Negeri 2 Cilegon				       SMAN 1 KOTA SERANG			                   UNIVERSITAS JENDERAL SOEDIRMAN</pre>
               </section>
 			<div class="box">
